set (example gpu_bandwidth)
include_directories (${CMAKE_CURRENT_BINARY_DIR})
compile_cl(direct_tets)
compile_cl(direct_vertices)
compile_cl(indirect_tets)
compile_cl(vertices_ball)
compile_cl(parameters)
add_executable(${example} ${example}.c direct_tets.h direct_vertices.h indirect_tets.h vertices_ball.h parameters.h)
target_link_libraries(${example} GM.3 ${libMeshb_LIBRARIES} ${OpenCL_LIBRARIES} ${LINK_LIBRARIES})
install (TARGETS ${example} DESTINATION share/GMlib/examples COMPONENT examples)
